fix(svg): fix clipped SVG in the footer

--- a/packages/ui/styles/Footer.module.scss
+++ b/packages/ui/styles/Footer.module.scss
@@ -10,18 +10,14 @@
 .vercelLogo {
   width: 124px;
   height: 28px;
-  margin: 0 1rem;
 }
 
 .denoLogo {
   width: 28px;
   height: 28px;
-  margin: 0 1rem;
 }
 
 .footer a {
   display: flex;
-  justify-content: center;
-  align-items: center;
-  overflow: hidden;
+  margin: 0 1rem;
 }
